--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -5,6 +5,31 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <style>
+            .label {
+                border: 1px solid;
+                border-radius: 5px;
+                padding: 5px 10px;
+                color: white
+            }
+            .label-success {
+                background-color: #28a745;
+                border-color: #1c7430;
+            }
+            .label-warning {
+                background-color: #ffc107;
+                border-color: orange;
+                color: black;
+            }
+            .label-danger {
+                background-color: #dc3545;
+                border-color: darkred;
+            }
+            .label-info {
+                background-color: #17a2b8;
+                border-color: #007bff;
+            }
+        </style>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
