feat(menu) fix(global): harmonize all javascript css and views

--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -5,43 +5,97 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        <style>
-            body {
-                font-size: 1.5em;
-            }
-            .label {
-                border: 1px solid;
-                border-radius: 5px;
-                padding: 5px 10px;
-                color: white
-            }
-            .label-success {
-                background-color: #28a745;
-                border-color: #1c7430;
-            }
-            .label-warning {
-                background-color: #ffc107;
-                border-color: orange;
-                color: black;
-            }
-            .label-danger {
-                background-color: #dc3545;
-                border-color: darkred;
-            }
-            .label-info {
-                background-color: #17a2b8;
-                border-color: #007bff;
-            }
-        </style>
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <style>
+                body {
+                    margin: 0;
+                    font-size: 1.5em;
+                }
+                /* The side navigation menu */
+                .sidenav {
+                    height: 100%; /* 100% Full-height */
+                    width: 0; /* 0 width - change this with JavaScript */
+                    position: fixed; /* Stay in place */
+                    z-index: 1; /* Stay on top */
+                    top: 0; /* Stay at the top */
+                    left: 0;
+                    background-color: #111; /* Black*/
+                    overflow-x: hidden; /* Disable horizontal scroll */
+                    padding-top: 60px; /* Place content 60px from the top */
+                    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+                }
+
+                /* The navigation menu links */
+                .sidenav a {
+                    padding: 8px 8px 8px 32px;
+                    text-decoration: none;
+                    font-size: 25px;
+                    color: #818181;
+                    display: block;
+                    transition: 0.3s;
+                }
+
+                /* When you mouse over the navigation links, change their color */
+                .sidenav a:hover {
+                    color: #f1f1f1;
+                }
+
+                /* Position and style the close button (top right corner) */
+                .sidenav .closebtn {
+                    position: absolute;
+                    top: 0;
+                    right: 25px;
+                    font-size: 36px;
+                    margin-left: 50px;
+                }
+
+                /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+                #main {
+                    transition: margin-left .5s;
+                    padding: 20px;
+                }
+
+                /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+                @media screen and (max-height: 450px) {
+                    .sidenav {padding-top: 15px;}
+                    .sidenav a {font-size: 18px;}
+                }
+            </style>
+{#            {{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+{#            {{ encore_entry_script_tags('app') }}#}
+            <script>
+                /* Set the width of the side navigation to 250px and the left margin of the page content to 250px and add a black background color to body */
+                function openNav() {
+                    document.getElementById("mySidenav").style.width = "250px";
+                    document.getElementById("main").style.marginLeft = "250px";
+                    document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+                }
+
+                /* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
+                function closeNav() {
+                    document.getElementById("mySidenav").style.width = "0";
+                    document.getElementById("main").style.marginLeft = "0";
+                    document.body.style.backgroundColor = "white";
+                }
+            </script>
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="{{ path('filters_page') }}">Filters & functions</a>
+            <a href="{{ path('productivity_page') }}">Productivity</a>
+            <a href="{{ path('sentry_test_one') }}">Sentry one</a>
+            <a href="{{ path('sentry_test_two') }}">Sentry two</a>
+            <a href="#">Form Symfo</a>
+            <a href="#">Form DTO</a>
+        </div>
+        <div id="main">
+            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+            {% block main %}{% endblock %}
+        </div>
     </body>
 </html>
