--- a/symfony/templates/productivity/view.html.twig
+++ b/symfony/templates/productivity/view.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
+  {{ parent() }}
   <style>
       html, body {
           width: 100%;
           height:100%;
           color: white;
       }
-      body {
+      #main {
           background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
           background-size: 400% 400%;
           animation: gradient 15s ease infinite;
@@ -33,7 +34,7 @@
       }
   </style>
 {% endblock %}
-{% block body %}
+{% block main %}
   <h1>Increase your productivity</h1>
   <h2>PHPStorm configuration</h2>
   <ul>
@@ -73,6 +74,7 @@
 {% endblock %}
 
 {% block javascripts %}
+  {{ parent() }}
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
       document.querySelectorAll('li').forEach(li => {
