feat(forms): symfony form

--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -90,8 +90,8 @@
             <a href="{{ path('productivity_page') }}">Productivity</a>
             <a href="{{ path('sentry_test_one') }}">Sentry one</a>
             <a href="{{ path('sentry_test_two') }}">Sentry two</a>
-            <a href="#">Form Symfo</a>
-            <a href="#">Form DTO</a>
+            <a href="{{ path('forms_symfony') }}">Form Symfo</a>
+            <a href="{{ path('forms_dto') }}">Form DTO</a>
         </div>
         <div id="main">
             <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
