feat(forms): handle error for form without symfony

--- a/symfony/templates/forms/symfony.html.twig
+++ b/symfony/templates/forms/symfony.html.twig
@@ -22,9 +22,9 @@
 
   <h2>Helpers</h2>
   <ul>
-    <li><a href="https://symfony.com/doc/current/form/form_collections.html">Symfony docs</a></li>
-    <li><a href="https://github.com/a2lix/symfony-collection">Help 1 given by Symfony</a></li>
-    <li><a href="https://symfony-collection.fuz.org/symfony3/#">Help 2 given by Symfony</a></li>
+    <li><a target="_blank" href="https://symfony.com/doc/current/form/form_collections.html">Symfony docs</a></li>
+    <li><a target="_blank" href="https://github.com/a2lix/symfony-collection">Help 1 given by Symfony</a></li>
+    <li><a target="_blank" href="https://symfony-collection.fuz.org/symfony3/#">Help 2 given by Symfony</a></li>
   </ul>
 
 {% endblock %}
