--- a/symfony/templates/home/index.html.twig
+++ b/symfony/templates/home/index.html.twig
@@ -13,7 +13,7 @@
 
     <div data-controller="hello">THIS WILL BE REPLACED</div>
 
-    <div {{ react_component('Hello', { 'fullName': 'Damien Test' }) }}>
+    <div {{ react_component('MultiStepForm') }}>
         Loading... <i class="fas fa-cog fa-spin fa-3x"></i>
     </div>
 </div>
